Nav links fixed

--- a/UI/css/nav.css
+++ b/UI/css/nav.css
@@ -9,6 +9,8 @@ nav {
 
 nav span {
 	font-family: "Montserrat", sans-serif;
+	margin: auto;
+	margin-top: 0;
 }
 
 .nav-unit {
@@ -16,9 +18,19 @@ nav span {
 	flex-direction: column;
 	text-align: center;
 	margin: auto;
+	width: 150px;
+	height: 100px;
 }
 
 .nav-img {
 	width: 44px;
 	margin: auto;
+	margin-bottom: 5px;
+}
+
+a,
+a:hover,
+a:visited {
+	color: #000;
+	text-decoration: none;
 }
